--- a/index.html
+++ b/index.html
@@ -14,31 +14,58 @@
     <link rel="stylesheet" href="styles.css" />
 
     <title>Frontend Mentor | NFT preview card component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
-  <body
-    class="flex h-screen justify-center items-center bg-very-dark-blue-main"
-  >
-    <div class="">
-      <img src="./images/image-equilibrium.jpg" alt="nft-image">
-      <h2 class="font-outfit font-semibold text-cyan">Hello world! 2</h2>
+  <body class="flex h-screen justify-center items-center bg-blue-main">
+    <main class="bg-blue-card rounded-lg w-80 p-6">
+      <div class="relative group cursor-pointer rounded-lg">
+        <img
+          class="rounded-lg"
+          src="./images/image-equilibrium.jpg"
+          alt="nft-image"
+        />
+        <div
+          class="rounded-lg inset-0 absolute hidden group-hover:flex justify-center items-center  bg-cyan opacity-75"
+        >
+          <img src="images/icon-view.svg" alt="view icon" />
+        </div>
+      </div>
 
-      <h2 class="text-white">Equilibrium #3429</h2>
-      <p>Our Equilibrium collection promotes balance and calm.</p>
-      <p>0.041 ETH</p>
-      <p>3 days left</p>
-      <p>Creation of Jules Wyvern</p>
-    </div>
+      <h2
+        class="text-[18px] semibold text-white hover:text-cyan cursor-pointer mt-5 mb-3"
+      >
+        Equilibrium #3429
+      </h2>
+      <p class="text-soft-blue mb-3">
+        Our Equilibrium collection promotes balance and calm.
+      </p>
+
+      <div class="flex justify-between mb-5">
+        <div class="flex items-center gap-2">
+          <img class="" src="images/icon-ethereum.svg" alt="icon-ethereum" />
+          <p class="font-semibold text-sm text-[18px] inline-block text-cyan">
+            0.041 ETH
+          </p>
+        </div>
+        <div class="flex items-center gap-1">
+          <img class="" src="images/icon-clock.svg" alt="icon-clock" />
+          <p class="text-sm inline-block text-soft-blue">3 days left</p>
+        </div>
+      </div>
+
+      <div class="flex gap-3 border-t-2 items-center border-blue-line pt-4">
+        <img
+          class="w-8 rounded-full border-white border-2"
+          src="images/image-avatar.png"
+          alt="image-avatar"
+        />
+        <p class="text-sm text-soft-blue text-">
+          Creation of
+          <span class="text-white hover:text-cyan cursor-pointer"
+            >Jules Wyvern</span
+          >
+        </p>
+      </div>
+    </main>
 
     <div class="hidden">
       Challenge by
